<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registerText"
        android:padding="15dp"
        android:textColorHint="@color/colorHeader"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="22dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="40dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_userid"
                    android:drawableLeft="@drawable/person"
                    android:hint="@string/user_id"
                    android:inputType="text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_password"
                    android:drawableLeft="@drawable/lock"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_repassword"
                    android:drawableLeft="@drawable/lock"
                    android:hint="@string/repassword"
                    android:inputType="textPassword"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_btn"
                    android:hint="@string/registerBtn"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>