<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bmiText"
        android:padding="15dp"
        android:textColorHint="@color/colorHeader"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="50dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bmi_height"
                    android:drawableLeft="@drawable/up"
                    android:hint="@string/height"
                    android:inputType="text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bmi_weight"
                    android:drawableLeft="@drawable/down"
                    android:hint="@string/weight"
                    android:inputType="text"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/calculate_btn"
                    android:hint="CALCULATE"/>

                <TextView
                    android:padding="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Your BMI"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:textSize="35dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rs_bmi"
                    android:padding="40dp"
                    android:text="00.00"
                    android:textSize="35dp"
                    android:layout_gravity="center"/>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>